# buildlinks_near_redbag

./: .gitignore  Cargo.toml  README.md  _rust_setup.sh  build.sh  makefile
contracts/blredbag/: Cargo.toml  README.md  build.sh
contracts/blredbag/src/: internal.rs  lib.rs  lib.rs.v010
contracts/redbag/: .gitignore  Cargo.toml  build.sh
contracts/redbag/src/: lib.rs.orig
frontend/src/: .env  .env.development  README.md  collect.html  login.html  openPacket.html  package.json  packetHistory.html  register.html  sendPacket.html  vue.config.js
frontend/src/css/: collect.css  login.css  openTotal.css  packetHistory.css  register.css  reset.css  sendPacket.css
frontend/src/js/: browser.js  collect.js  config.js  index.js  login.js  main.js  near-api-js.js  openPacket.js  packetHistory.js  public.js  sendPacket.js
frontend/src/public/: index.html
frontend/src/src/: App.vue  main.js
frontend/src/src/assets/css/: near.css
frontend/src/src/components/: Drop.vue  QRCode.vue  RedbagAlert.vue  RedbagInfo.vue  SendRedbag.vue
frontend/src/src/plugin/: loading.js
frontend/src/src/router/: index.js
frontend/src/src/utils/: config.js  utils.js
frontend/src/src/views/: Index.vue  SendPacket.vue
res/: redbag.wasm  redbag2.wasm
src/: internal.rs  lib.rs
